--- a/_css/estilo.css
+++ b/_css/estilo.css
@@ -6,10 +6,24 @@
 }
 
 body {
+    font-family: Arial, Helvetica, sans-serif;
     background-color: #ddd;
     color: rgba(0, 0, 0, 1);
 }
 
+p {
+    text-align: justify;
+    text-indent: 30px;
+}
+
+a {
+    text-decoration: none ;
+    color: #606060;
+}
+
+a:hover {
+    text-decoration: underline;
+}
 #icone {
     position: absolute;
     right: 130px;
@@ -38,12 +52,6 @@ body {
     padding: 0px;
     margin-top: 0px;
 }
-
-p {
-    text-align: justify;
-    text-indent: 30px;
-}
-
 /* Formatação de imagens com legendas */
 
 .foto-legenda {
@@ -127,6 +135,36 @@ figcaption:hover{
     float: left;
     padding-right: 25px;
     border-right: solid 1px #606060;
+}
+
+#noticia-principal h2 {
+    font-size: 12pt;
+    color: #606060;
+    background-color: #ddd;
+    padding: 5px 0px 5px 10px;
+    margin: 10px 0px 10px 0px;
+}
+
+#cabecalho-artigo h1 {
+    font-family: 'fonteLogo', sans-serif;
+    font-size: 20pt;
+    color: #606060;
+    margin-bottom: 0px; 
+}
+
+#cabecalho-artigo h2 {
+    font-size: 13pt;
+    color: #97a797;
+    background-color: white;
+}
+
+#cabecalho-artigo h3 {
+    font-size: 12pt;
+    color: #606060;
+}
+
+.direita {
+    text-align: right;
 }
 
 #tabela {
