--- a/_css/estilo.css
+++ b/_css/estilo.css
@@ -26,7 +26,7 @@ a:hover {
 }
 #icone {
     position: absolute;
-    right: 130px;
+    right: -59px;
     top: 80px;
 }
 
@@ -88,7 +88,7 @@ figcaption:hover{
     text-transform: uppercase;
     position: absolute;
     top: 0px;
-    right: 155px;
+    right: 1px;
 }
 
 .navegacao li {
@@ -127,6 +127,7 @@ figcaption:hover{
     background-color: #fff;
     margin: -20px auto 0px auto;
     box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.664);
+    position: relative;
 }
 
 #corpo {
